Correction bug affichage scrollbar Thanks jf.ageneau

--- a/css/styles.css
+++ b/css/styles.css
@@ -1098,7 +1098,7 @@ div#c_menu{
 	position: absolute;
 	top: 0px;
 	z-index: 10;
-	margin-left: 45px;
+	left: 45px;
 }
 
 div#c_menu ul#menu{
